# prettyspecialmethods

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
sphinxcontrib/: __init__.py  prettyspecialmethods.py
sphinxcontrib/prettyspecialmethods/: __init__.py
tests/: conftest.py  test_implemented.py  test_plaintext.py
tests/test-autodoc/: index.rst  test_autodoc_module.py
tests/test-autodoc-self-param/: conf.py  index.rst  test_autodoc_self_param_module.py
tests/test-simple/: conf.py  index.rst
tests/test-simple-self-param/: conf.py  index.rst
